--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+@keyframes fade {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+}
+
 .App {
   margin-top: 50px;
   display: flex;
@@ -6,6 +19,7 @@
   border-radius: 8px;
   overflow: hidden;
   margin: 50px 25%;
+  animation: fade 2s linear forwards;
 }
 
 .info,
